[gd_scene load_steps=10 format=3 uid="uid://bhsx2e7ejfu3h"]

[ext_resource type="Script" path="res://crystal.gd" id="1_m2bh6"]
[ext_resource type="Texture2D" uid="uid://uhwu0o33hwxj" path="res://assets/crystal_bits.png" id="1_qqgt3"]
[ext_resource type="Script" path="res://components/MoveComponent.gd" id="2_fhu4l"]
[ext_resource type="AudioStream" uid="uid://dij24i41mfgxf" path="res://sounds/collect.wav" id="4_b8gxl"]
[ext_resource type="Script" path="res://components/variable_pitch_audio_stream_player.gd" id="5_36d7q"]
[ext_resource type="Script" path="res://components/ScoreComponent.gd" id="6_lkhq5"]
[ext_resource type="Resource" uid="uid://dtugpjbo5yxki" path="res://game_stats.tres" id="7_oo53l"]

[sub_resource type="CircleShape2D" id="CircleShape2D_q850k"]
radius = 5.29955

[sub_resource type="AtlasTexture" id="AtlasTexture_8wjg1"]
atlas = ExtResource("1_qqgt3")
region = Rect2(0, 0, 16, 16)

[node name="Crystal" type="Area2D"]
collision_layer = 4
collision_mask = 8
script = ExtResource("1_m2bh6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 4
visibility_layer = 4
scale = Vector2(0.943476, 1)
shape = SubResource("CircleShape2D_q850k")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_8wjg1")

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("2_fhu4l")
actor = NodePath("..")
speed = 20

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0.5, -2.38419e-07)
scale = Vector2(0.25, 0.4)

[node name="VariablePitchAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_b8gxl")
script = ExtResource("5_36d7q")

[node name="ScoreComponent" type="Node" parent="."]
script = ExtResource("6_lkhq5")
game_stats = ExtResource("7_oo53l")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="finished" from="VariablePitchAudioStreamPlayer" to="." method="_on_variable_pitch_audio_stream_player_finished"]
